@@ -53,6 +53,7 @@ namespace Orthanc
     std::string               localAet_;
     std::string               targetAet_;
     RemoteModalityParameters  remote_;
+    int                       timeout_;
     Json::Value               query_;
 
     std::unique_ptr<DicomControlUserConnection>  connection_;
@@ -94,6 +95,17 @@ namespace Orthanc
     }
 
     void SetRemoteModality(const RemoteModalityParameters& remote);
+
+    void SetTimeout(int timeout)
+    {
+      timeout_ = timeout;
+    }
+
+    int GetTimeout() const
+    {
+      return timeout_;
+    }
+
 
     virtual void Stop(JobStopReason reason);
 
